Add activity category endpoint
