# resource/openapi/api-spec.yaml
@@ -11,6 +11,8 @@ tags:
     description: User Authentication
   - name: Student
     description: Student and Class
+  - name: Activity
+    description: Activity and Achievement
 
 servers:
   - url: http://localhost:4000
@@ -290,6 +292,29 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+
+  /activity-categories:
+    get:
+      summary: List all activity category
+      operationId: listActivityCategory
+      tags:
+        - Activity
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/ActivityCategory"
+        "500":
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"                
+                
 components:
   securitySchemes:
     bearerAuth:
@@ -501,3 +526,14 @@ components:
         user:
           $ref: "#/components/schemas/User"
 
+    ActivityCategory:
+      type: object
+      required:
+        - id
+        - name
+      properties:
+        id:
+          type: string
+        name:
+          type: object
+          additionalProperties: true
