# src/__generated__/openapi/schema.ts
@@ -107,6 +107,23 @@ export interface paths {
         patch?: never;
         trace?: never;
     };
+    "/activity-categories": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        /** List all activity category */
+        get: operations["listActivityCategory"];
+        put?: never;
+        post?: never;
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
 }
 export type webhooks = Record<string, never>;
 export interface components {
@@ -202,6 +219,12 @@ export interface components {
         AuthenticationResponse: {
             status: components["schemas"]["AuthenticationStatus"];
             user: components["schemas"]["User"];
+        };
+        ActivityCategory: {
+            id: string;
+            name: {
+                [key: string]: unknown;
+            };
         };
     };
     responses: never;
@@ -483,6 +506,35 @@ export interface operations {
             };
             /** @description Unauthorized - Invalid user */
             401: {
+                headers: {
+                    [name: string]: unknown;
+                };
+                content: {
+                    "application/json": components["schemas"]["Error"];
+                };
+            };
+        };
+    };
+    listActivityCategory: {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        requestBody?: never;
+        responses: {
+            /** @description OK */
+            200: {
+                headers: {
+                    [name: string]: unknown;
+                };
+                content: {
+                    "application/json": components["schemas"]["ActivityCategory"][];
+                };
+            };
+            /** @description Unexpected error */
+            500: {
                 headers: {
                     [name: string]: unknown;
                 };
