# src/app.ts
@@ -7,6 +7,7 @@ import studentRouter from './rest/route/student-end-point';
 import userRouter from './rest/route/user-end-point';
 import userAuthenticationRouter from './rest/route/user-authentication-end-point';
 import googleAuthenticationRouter from './rest/route/google-authentication-end-point';
+import activityCategoryRouter from './rest/route/activity-category-end-point';
 
 import { errorHandler } from './rest/middleware/error-handler';
 import { jwtHandler } from './rest/middleware/jwt-handler';
@@ -24,6 +25,7 @@ app.use('/students', studentRouter);
 app.use('/users', userRouter);
 app.use('/google-authentications', googleAuthenticationRouter);
 app.use('/user-authentications', userAuthenticationRouter);
+app.use('/activity-categories', activityCategoryRouter);
 app.use(errorHandler); // Global error handler
 
 export default app;
